--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
+    "@mui/x-data-grid": "^5.16.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
+    "sweetalert2": "^11.4.29",
+    "sweetalert2-react-content": "^5.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
