--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.3",
+    "axios": "^0.27.2",
+    "firebase": "^9.9.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
