--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
+    "@mui/x-data-grid": "^5.16.0",
     "axios": "^0.27.2",
     "firebase": "^9.9.4",
-    "@mui/x-data-grid": "^5.16.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.8",
     "sweetalert2": "^11.4.29",
     "sweetalert2-react-content": "^5.0.3"
   },
