--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.16.0",
+    "@mui/x-date-pickers": "^5.0.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
+    "dayjs": "^1.11.5",
     "firebase": "^9.9.4",
     "next": "12.2.5",
     "react": "18.2.0",
