--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.16.0",
     "@mui/x-date-pickers": "^5.0.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
