--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-toastify": "^9.0.8",
     "sweetalert2": "^11.4.29",
     "sweetalert2-react-content": "^5.0.3"
