--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^5.0.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "currency.js": "^2.0.4",
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
     "firebase": "^9.9.4",
