--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
     "firebase": "^9.9.4",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
